gfxboot-theme-ubuntu (0.4.1) UNRELEASED; urgency=low

  * Remove unused logo fading code.
  * Update langlist from langnames.inc.
  * Override language names for Gujarati, Khmer, Malayalam, and Tamil to use
    the English names; I don't seem to be able to generate a font containing
    the necessary characters for their localised names at the moment.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Aug 2007 20:46:18 +0100

gfxboot-theme-ubuntu (0.4.0) gutsy; urgency=low

  * Use priority=low for d-i expert mode rather than DEBCONF_PRIORITY=low.
  * Update keymaps from console-setup 1.16ubuntu4. Add locale mappings for
    Esperanto and Latvia, tag Lithuania as non-Latin so that the US keymap
    is used for it within gfxboot, and switch France to the oss variant.
  * Add/update translations from Rosetta (LP: #108705).
  * Change "Text mode install for ma^nufacturers" to "^OEM install (for
    manufacturers)", since the OEM install isn't just text mode any more. I
    hope this will still avoid the confusion from bug #95582.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Aug 2007 11:45:26 +0100

gfxboot-theme-ubuntu (0.3.7) feisty; urgency=low

  * Reduce length of Congo and Korea keymap names, fixing F3 menu display
    (LP: #105529).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2007 13:55:55 +0100

gfxboot-theme-ubuntu (0.3.6) feisty; urgency=low

  * Add localisation for "Install a ser^ver" and "Install an ^LTSP server".

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  5 Apr 2007 18:37:04 +0100

gfxboot-theme-ubuntu (0.3.5) feisty; urgency=low

  * Change "Install in ^OEM mode" to "Text mode install for ma^nufacturers"
    (LP: #95582).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  5 Apr 2007 14:54:46 +0100

gfxboot-theme-ubuntu (0.3.4) feisty; urgency=low

  * Rename brltty=ask to braille=ask (LP: #91894).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 27 Mar 2007 12:49:11 +0100

gfxboot-theme-ubuntu (0.3.3) feisty; urgency=low
